test/files/neg/deprecated-options.scala
//
// scalac: -Werror -deprecation -optimise -Xexperimental -Xfuture
//
// Deprecated options are announced before compilation.
